--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -68,17 +68,17 @@ h1, h2, h3, h4, h5 {
 body {
   max-width: 880px;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
 }
 
 .header-content {
   display: flex;
-  height: 10vh;
+  height: 100px;
 }
 
 .header-left {
   display: flex;
-  width: 80vw;
+  width: 70%;
   justify-content: space-between;
   align-items: center;
 }
@@ -89,12 +89,72 @@ body {
 }
 
 .header-right {
-  width: 30vw;
+  width: 30%;
   display: flex;
   align-self: center;
   justify-content: flex-end;
 }
 
+.headline {
+  display: flex;
+  margin-bottom: 10%;
+}
+
+.headline-left {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 60px;
+  font-family: "bangers";
+}
+
+.headline-left .button {
+  border: 1px solid grey;
+  padding: 5px 20px;
+  margin: 20px;
+  font-size: 16px;
+  font-family: sans-serif;
+}
+
+.headline-right {
+  width: 50%;
+}
+
+.main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.features {
+  padding: 20px 0px;
+  width: 50%;
+}
+
+.about {
+  padding: 20px 0px;
+  width: 50%;
+}
+
+.main-image {
+  width: 100%;
+}
+
+.three {
+  padding: 20px 0px;
+  width: 33.33%;
+}
+
+.contact {
+  padding-top: 20px;
+}
+
+footer {
+  text-align: center;
+  padding: 50px 0px;
+}
 
 
 
